# MyLittleExpression

./: Cargo.toml  README.md  README.txt
src/: big_integer.rs  config.rs  error.rs  lib.rs  parser.rs  small_float.rs  small_integer.rs
tests/: basic_arithmetics.rs  basic_arithmetics_order.rs  basic_negative.rs  big_integer.rs  brackets.rs  overflow.rs  setup.rs  smallfloats.rs  unary_numeric_system.rs  variables.rs
